PHP Password Manager (ppma) Change Log
======================================

Version 0.5.0
-------------
- Bug #40: 400 error when deleting tag
- Enh: added form that will be shown if the user tried to delete an entry per GET-request

Version 0.4.2
-------------
- Bug #30: Search results pagination goes to main password list instead
- Bug #31: CSV import limited to 167 entries: Added hint to import
- Bug #32: Tags don't get imported from CSV
- Bug #33: Updated zeroclipboard to version 2.1.6
- Bug #35: Error code 400 on delete request

Version 0.4.1
-------------
- Bug #29: Tags overview is locked to 10 entries, regardless of "Results per page" setting

Version 0.4.0
-------------
- Enh: Added a "Results per page"-dropdown to `entry/index` and `tag/index`
- Chg: Upgraded Yii to version 1.1.15

Version 0.3.10
--------------
- Enh #24: Added "copy to clipboard" function. Thanks to [crossgate9](https://github.com/crossgate9)
- Enh #27: Improved requirement check in setup routine. Thanks to [IntiGabriel](https://github.com/IntiGabriel)
- Enh: Improved upgrade routine

Version 0.3.9
-------------
- Bug: #19: When creating new passwords with tags they don't get added

Version 0.3.8
-------------
- Bug: #18: Upgrade from 0.3.5.1 to 0.3.7 required two upgrade passes to complete
- Enh: Improved upgrade routine

Version 0.3.7
-------------
- Bug: #14: Safari doesn't let you view password
- Enh: #14: Added `autocomplete="off"` to entry form
- Enh: Added `require` attribute to entry form
- Enh: Added link to main page in navigation
- Bug: Fixed design of sidebar

Version 0.3.6
-------------
- Bug: #14: Tags getting erased
- Enh: Added placeholder to tag list of Entry-form
- New: Added Grunt for the building process
- Chg: Added Yii via Composer
- Bug: setup.css is linked in the setup routine, but does not exist
- Enh: Improved setup routine

Version 0.3.5.2
---------------
- Bug #9: Improved requirement check in setup routine to prevent "setup loop"
- New: Added robots.txt