@@ -8,7 +8,7 @@
 
     <p>Do you really want to delete this tag?</p>
 
-    <a href="<?= CHtml::normalizeUrl(['tag/index']) ?>">
+    <a href="<?= CHtml::normalizeUrl(array('tag/index')) ?>">
         <?php echo CHtml::button('Cancel', array('class' => 'secondary button radius'))?>
     </a>
     <?php echo CHtml::submitButton('Yep, delete this tag', array('class' => 'alert button radius'))?>
