@@ -4,4 +4,5 @@
 $yiic=dirname(__FILE__).'/../yii/yiic.php';
 $config=dirname(__FILE__).'/config/console.php';
 
+/** @noinspection PhpIncludeInspection */
 require_once($yiic);
